Typografiske justeringer, skrivefeil og oppretting av et delkapittel som skal si noe konkret om de ulike medlemmenes faglige kompetanse

--- a/konseptdokument/tech.tex
+++ b/konseptdokument/tech.tex
@@ -55,4 +55,4 @@ Garbage Alert kan utvikles i hvilken som helst applikasjon som er i stand til å
 
 Forutsett at du har Git og Python\footnote{Hvilken som helst server-programvare kan benyttes, Python nevnes her da dette verktøysettet er temmelig utbredt og er enkelt å starte.} installert, her er hvordan du starter spillet fra egen datamaskin via en terminalklient.
 
-Først, last ned kildefilene fra GitHub med kommandoen \texttt{git clone git://github.com/aspic/Garbage-Alert.git}. Spillet vil da lastes ned til mappen \texttt{Garbage-Alert}. Navigér til mappa kalt \texttt{webver} under denne  og start spillet med kommandoen \texttt{python -m SimpleHTTPServer 8080}. Start en kompatibel nettleser og navigér til URLen \url{http://localhost:8080}. Garbage Alert vil nå kjøre lokalt på din datamaskin.
+Først, last ned kildefilene fra GitHub med kommandoen \newline\texttt{git clone git://github.com/aspic/Garbage-Alert.git}. Spillet vil da lastes ned til mappen \texttt{Garbage-Alert}. Navigér til mappa kalt \texttt{webver} under denne  og start spillet med kommandoen \texttt{python -m SimpleHTTPServer 8080}. Start en kompatibel nettleser og navigér til URLen \url{http://localhost:8080}. Garbage Alert vil nå kjøre lokalt på din datamaskin.
