--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -26,7 +26,7 @@ beskrevet.
 
 \begin{description}
 \item[Kjetil Mehl (23), datateknikk] \hfill \\
-Han begynte sin spillkarriere med en \gls{Nintendo 64} i 1999. Da
+Kjetil begynte sin spillkarriere med en \gls{Nintendo 64} i 1999. Da
 var det eventyr og rollespill (se Avsnitt~\ref{sec:sjangre}) som
 \gls{Legend of Zelda} og \gls{Banjo Kazooie} som
 stod i fokus. Da datamaskinen kom i hus gikk spillfokuset  over på
@@ -35,7 +35,7 @@ en Nintendo~\gls{Fanboy}, men har i de senere år utvidet
 kolleksjonen til å omfatte Xbox.
 
 \item[Ina Sander Pedersen (26), bioteknologi] \hfill \\
-I 1996 oppdaget hun \gls{Rayman} til PC og var fra den dag frelst for
+I 1996 oppdaget Ina \gls{Rayman} til PC og var fra den dag frelst for
 serien, men skiftet raskt konsoll til Playstation. For Ina har sjangeren
 plattform vært en klar favoritt gjennom årene og da hun senere fikk
 \gls{Gameboy} gikk tiden med til \gls{DKC2}. Etterhvert som årene har gått har hun skiftet mellom
@@ -45,14 +45,14 @@ men Rayman og Donkey Kong seriene er og blir favoritter.
 \item[Christian Aleksander Lysne (22), datateknikk, prosjektledelse] \hfill \\
 Christian var 8 år da han fikk sin første \gls{Nintendo 64}, med
 spillene \gls{Mario 64} og \gls{Mario Kart}.
-Senere gikk det i \gls{Legend of Zelda}  og \gls{SSMB}.
+Senere gikk det i \gls{Legend of Zelda}  og \gls{SSBM}.
 \gls{Tekken} var også  populært i oppveksten. \gls{WC3} og
 \gls{Diablo 2} tok etter hvert over, og spilles fortsatt i perioder.
 
 \item[Andreas Røysland Aarnes (25), geologi] \hfill \\
 Som seksåring prøvde Andreas \gls{Super Mario World} på
 \gls{SNES} for første gang, og det var ikke før
-i 2011, da remaken New Super Mario Bros. Wii kom til
+i 2011, da New Super Mario Bros. Wii kom til
 \gls{Wii}, at han igjen ble tilfredstilt innen
 spillverdenen. I mellomtiden har han låst seg til strategispill-seriene
 \gls{WC3}, \gls{C and C} og Age of
@@ -83,7 +83,7 @@ redusert forbruk), ble problemstillingen forfattet.
 \subsubsection{Problemstillingen}\label{sec:problemstilling}
 Den valgte problemstillingen er gjengitt nedenfor:
 \begin{quotation}
-\large\emph{``\input{../problemstilling}''}
+\large\emph{"\input{../problemstilling}"}
 \end{quotation}
 \subsection{Prosessen}
 Dette avsnittet forteller hvordan konseptet ble til ved å gå fra en
@@ -92,13 +92,13 @@ denne prosessen var ikke iterativ, ettersom gruppen i praksis gikk fra
 en vagt definert problemstilling, til en idè, for så å redefinere idèen
 for å bedre passe den valgte problemstillingen. Prosessen gikk deretter
 fra idè til konsept. 
-\subsubsection{Fra problemstilling til idè}
-Det ble brukt mye tid på å utforske forskjellige idèer som var
+\subsubsection{Fra problemstilling til idé}
+Det ble brukt mye tid på å utforske forskjellige ideer som var
 interessante. Gruppen følte seg ikke veldig bundet av den opprinnelige
 problemstillingen, og eksperimenterte derfor med forskjellige idèer.
-Gitt problemstillingen i Avsnitt~\ref{sec:problemstilling} var det
+Gitt problemstillingen i avsnitt~\ref{sec:problemstilling} var det
 naturlig å tenke på et spill som var turbasert eller sanntidsspill med
-flere spillere. Det stod også sentralt å bruke hele gruppens kompentanse. Ettersom tre av gruppens medlemmer har god datakunnskap var det essensielt å flette inn biologi og geologi i idèen. Med fokus rundt dette skapte vi vår første idè.
+flere spillere. Det stod også sentralt å bruke hele gruppens kompentanse. Ettersom tre av gruppens medlemmer har god datakunnskap var det essensielt å flette inn biologi og geologi i ideen. Med fokus rundt dette skapte vi vår første idé.
 \begin{description}
 \item[Energispillet med flerspillermodus] \hfill\\
 Spillere skal organisere hver sin lille by, hvor fokuset er å forhandle
@@ -119,13 +119,14 @@ videre:
 	\item Lokale faktorer kan påvirke det globale miljøet
 \end{itemize}
 \subsubsection{Redefinering av ideen}
-Den opprinnelige idèen utviklet seg dermed til et rent konkurransespill, med
-mindre fokus på sanking/utvinning av resurser. For å minske ressursfokuset
-ble det bestemt at hver øy er en ``søppeløy'', og målet til spilleren er
+Den opprinnelige ideen utviklet seg dermed til et rent konkurransespill, med
+mindre fokus på sanking og gjenbruk av resurser. For å minske ressursfokuset
+ble det bestemt at hver øy er en "søppeløy", og målet til spilleren er
 å fjerne alt søppelet på sin øy.  Ressurser blir utvinnet ved å
 resirkulere søppelet på øya. Ved å legge inn denne varianten ble idèen mer
-konform med problemstillingen. Energispillet med flerspillermodus hadde en meget stor grad av geoteknologi, geologi, samt bioteknologi. Ettersom fokuset ble vendt mer mot problemstillingen, ble forsvant disse fagområdene fra spillet. Andreas og Ina fant en løsning på dette ved å innføre såkalte geohazards og biohazards i spillet (se Avsnitt~\ref{sec:hazards})
+konform med problemstillingen. Energispillet med flerspillermodus hadde en meget stor grad av geoteknologi, geologi, samt bioteknologi. Ettersom fokuset ble vendt mer mot problemstillingen, ble forsvant disse fagområdene fra spillet. Andreas og Ina fant en løsning på dette ved å innføre såkalte geohasarder og biohasarder i spillet (se Avsnitt~\ref{sec:hazards})
 
-%Det ble gjort koblinger opp mot et spill lignende Advanced
-%Wars\cite{advancewars} eller Wordfeud\cite{wordfeud} med fokus på
-%miljøet.
+
+
+\subsection{Wudda!}
+% Her: skrive direkte om hva de ulike menneskene i gruppa bidrar med i kraft av sin unike kompetanse.
