--- a/prosessrapport/gruppen.tex
+++ b/prosessrapport/gruppen.tex
@@ -1,7 +1,12 @@
 \section{Presentasjon av gruppen}
-Da \emph{''En spillverden på ett semester''} dreier seg om det å skape og utvikle et spillkonsept viste landsbyen seg å være svært attraktiv for studenter innenfor datarelaterte fag. Også vår gruppe reflekterte dette, og tre av gruppens fem medlemmer har datafaglig bakgrunn.
+Da \emph{''En spillverden på ett semester''} dreier seg om det å skape
+og utvikle et spillkonsept viste landsbyen seg å være svært attraktiv
+for studenter innenfor datarelaterte fag. Også vår gruppe reflekterte
+dette, og tre av gruppens fem medlemmer har datafaglig bakgrunn.
 
-\subsection{Gruppens medlemmer}
+\subsection{Gruppens medlemmer}\label{sec:members}
+Denne seksjonen presenterer de ulike gruppemedlemmene, deres bakgrunner
+og hvordan gruppen i en tidlig fase opplever hvert medlem.
 	\subsubsection{Andreas Røysland Aarnes}
 	Andreas er 25 år gammel, fra Stavanger og studerer geologi og geofysikk. Han jobber for Det Norske Oljeselskap og driver ellers mye med musikk. Innen spillverdenen er han spesielt interessert i strategispill. EiT for Andreas viste seg å være mye kjekkere enn det han hadde forventet, ettersom han får bruke sine kreative og sosiale sider på nye måter. 
 
@@ -18,7 +23,10 @@ Da \emph{''En spillverden på ett semester''} dreier seg om det å skape og utvi
 	Ina ser på seg selv som ryddig og presis i sitt arbeid, noe resten av gruppen er enig i. Gruppen synes at Ina er en rolig person som er mer forsiktig enn impulsiv. Men når en diskusjon begynner å bli ferdig og gruppemedlemmene begynner å bli enige, er Ina flink til å kartlegge og få kontroll over situasjonen og hva gruppen har kommet frem til. Gruppen synes hun er vennlig og aksepterende.
 
 	\subsubsection{Kjetil Mehl}
-	23 år gammel datateknikkstudent fra Rosendal. Har jobbet en del med spill tidligere.
+	23 år gammel datateknikkstudent fra Rosendal. Han har jobbet en del
+med spill tidligere, både i skolesammenheng og på hobbybasis. Det er
+selve utviklingsprosessen som interesserer Kjetil, og det var dette som
+var motivatoren landsbyvalget.
 
 	Gruppen synes Kjetil er flink til å ha kontroll over arbeidet underveis i prosessen. Han er objektiv og analytisk, i tillegg til å være en person som holder en god stemning på gruppen. Han jobber veldig effektivt når han jobber alene, men det hender at han kan bli litt fraværende og usosial når han først er godt i gang med individuelt arbeid.
 
