Use correct word.

--- a/prosessrapport/gruppen.tex
+++ b/prosessrapport/gruppen.tex
@@ -26,7 +26,7 @@ og hvordan gruppen i en tidlig fase opplever hvert medlem.
 	23 år gammel datateknikkstudent fra Rosendal. Han har jobbet en del
 med spill tidligere, både i skolesammenheng og på hobbybasis. Det er
 selve utviklingsprosessen som interesserer Kjetil, og det var dette som
-var motivatoren landsbyvalget.
+var motivasjonsfaktoren landsbyvalget.
 
 	Gruppen synes Kjetil er flink til å ha kontroll over arbeidet underveis i prosessen. Han er objektiv og analytisk, i tillegg til å være en person som holder en god stemning på gruppen. Han jobber veldig effektivt når han jobber alene, men det hender at han kan bli litt fraværende og usosial når han først er godt i gang med individuelt arbeid.
 
