Litt tekst til faglig kompetanse

--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -123,10 +123,14 @@ Den opprinnelige ideen utviklet seg dermed til et rent konkurransespill, med
 mindre fokus på sanking og gjenbruk av resurser. For å minske ressursfokuset
 ble det bestemt at hver øy er en "søppeløy", og målet til spilleren er
 å fjerne alt søppelet på sin øy.  Ressurser blir utvinnet ved å
-resirkulere søppelet på øya. Ved å legge inn denne varianten ble idèen mer
-konform med problemstillingen. Energispillet med flerspillermodus hadde en meget stor grad av geoteknologi, geologi, samt bioteknologi. Ettersom fokuset ble vendt mer mot problemstillingen, ble forsvant disse fagområdene fra spillet. Andreas og Ina fant en løsning på dette ved å innføre såkalte geohasarder og biohasarder i spillet (se Avsnitt~\ref{sec:hazards})
+resirkulere søppelet på øya. Ved å legge inn denne varianten ble ideen mer
+konform med problemstillingen. Energispillet med flerspillermodus hadde en meget stor grad av geoteknologi, geologi, samt bioteknologi. Ettersom fokuset ble vendt mer mot problemstillingen, ble forsvant disse fagområdene fra spillet. Andreas og Ina fant en løsning på dette ved å innføre såkalte geohasarder og biohasarder i spillet (se avsnitt~\ref{sec:hazards})
 
 
 
-\subsection{Wudda!}
-% Her: skrive direkte om hva de ulike menneskene i gruppa bidrar med i kraft av sin unike kompetanse.
+\subsection{Huddahuddahudda!}
+
+Kjetil, Trond Kjetil og Christian er mennesker med bakgrunn fra datafaglig utdanning henholdsvis datateknikk og informatikk fra NTNU og dataingeniør fra HiST. Disse tok derfor på seg oppgaven relatert til den tekniske implementasjonen av spillet.
+Ina har sin bakgrunn bioteknologi fra NTNU, og Andreas' bakgrunn stammer petroleumsgeologi, også fra NTNU.
+Deres bakgrunn og faglige kompetanse kommer til syne i spillelementer integrert i spillet.
+Chistian studerer i dag Project Management, og vi kunne derfor ha benyttet oss av hans prosjektstryingskunnskaper, men da vi har holdt gruppestrukturen så flat som mulig, her ikke dette kommet særlig fram.
