Fixed broken glossary

--- a/konseptdokument/glossaries.tex
+++ b/konseptdokument/glossaries.tex
@@ -39,7 +39,7 @@ Nintendo.
 \dictentry{DKC2}{
 	Donkey Kong Country Country 2
 }
-\dictentry{SSMB}{
+\dictentry{SSBM}{
 	Super Smash Brothers, et slossespill utgitt til, og av Nintendo 64 i
 1999.
 }
