lagt til samfunnsnytte i resultat

--- a/konseptdokument/conclusion.tex
+++ b/konseptdokument/conclusion.tex
@@ -1,1 +1,12 @@
-\section{Konklusjon, eller resultat?}
+\section{Resultat}
+\subsection{Samfunnsnytten av spillet}
+Garbage Alert har som mål å belyse nytten av gjenbruk og resirkulering, lokalt og globalt, gjennom et flerspiller dataspill (se seksjon \ref{sec:problemstilling}, Problemstilling).
+Gjenvinning av søppel står sentralt i Garbage Alert. Når spilleren gjenvinner ulike ressurser fra søppelet vil han/hun se at man ikke nødvendigvis er avhengig av å utvinne nye ressurser, men at man kan bruke ressursene man har på ny. Dette vil forhåpentligvis gi økt bevissthet rundt gjenbruk. \\
+
+De ulike oppgraderingene som finnes i spillet kan relateres til forskning innen gjenbruk og resirkulering, som gjør det mulig å gjenbruke flere typer ressurser fra søppelet samt øke gjenvinningsgraden og effektiviteten. Dette har som mål å belyse hvor viktig det er å forske på disse aspektene rundt gjenbruk og nytten vi har av det. \\
+
+Krig, som står sentralt i Garbage Alert, er ikke direkte en samfunnsnyttig del av spillet. Det er derimot flere aspekter med dette som kan relateres til dagens samfunn. De forskjellige mulighetene spilleren har innen bygging av forsvar og angrep viser at et økt gjenbruk, som gir spilleren flere ressurser og øker effektiviteten, gir muligheten til å bygge bedre bygninger, noe som må til for å vinne spillet. I tillegg til dette har katastrofene som kan inntreffe i spillet en parallell til dagens samfunn. Ved å ikke ta ansvar for søppelet, øker sannsynligheten for globale katastrofer, der global oppvarmning er et meget viktig tema idag. Noen av de geologiske katastrofene i spillet kan være et direkte resultat av global oppvarmning. De biologiske katastrofene er knyttet til mulige utfall dersom man ikke blir kvitt søppelet. I Garbage Alert finnes det både lokale og globale katastrofer. Dette skal belyse at både deg selv og andre blir berørt av handlinger som ikke nødvendigvis er utført av deg.\\
+
+Katastrofene i spillet er i større grad en eksplisitt informativ konsekvens som belyser negative følger av dårlig håndtering av søppel. De fleste informative delene av spillet er derimot implisitte, og vil forhåpentligvis øke spillerens bevisshet rundt økt gjenbruk og nytten av dette. 
+
+\subsection{Videre arbeid}
