--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -75,7 +75,7 @@ lå til grunn for dette valget.
 \subsubsection{Valg av problemstilling}
 En av de største begrensningene i selve oppgaven var at
 problemstillingen måtte sentreres rundt det å skape et interessant spill
-om resirkulering og gjenbruk. Etter flere diskusjoner og idèmyldringer ble gruppen
+om resirkulering og gjenbruk. Etter flere diskusjoner og idémyldringer ble gruppen
 enig om at det var ønskelig å lage et flerspiller-dataspill.
 Det ble også ytret ønske om at spillmekanikken skulle foregå både på et
 mikroskopisk nivå (lokalt) og makroskopisk nivå (globalt). Ved å
@@ -88,18 +88,18 @@ Den valgte problemstillingen er gjengitt nedenfor:
 \end{quotation}
 \subsection{Prosessen}
 Dette avsnittet forteller hvordan konseptet ble til ved å gå fra en
-problemstilling, til en idè og til slutt et konsept. Den første delen av
+problemstilling, til en idé og til slutt et konsept. Den første delen av
 denne prosessen var ikke iterativ, ettersom gruppen i praksis gikk fra
-en vagt definert problemstilling, til en idè, for så å redefinere idèen
+en vagt definert problemstilling, til en idé, for så å redefinere ideen
 for å bedre passe den valgte problemstillingen. Prosessen gikk deretter
-fra idè til konsept. 
+fra idé til konsept. 
 \subsubsection{Fra problemstilling til idé}
 Det ble brukt mye tid på å utforske forskjellige ideer som var
 interessante. Gruppen følte seg ikke veldig bundet av den opprinnelige
-problemstillingen, og eksperimenterte derfor med forskjellige idèer.
+problemstillingen, og eksperimenterte derfor med forskjellige ideer.
 Gitt problemstillingen i avsnitt~\ref{sec:problemstilling} var det
 naturlig å tenke på et spill som var turbasert eller sanntidsspill med
-flere spillere. Det stod også sentralt å bruke hele gruppens kompentanse. Ettersom tre av gruppens medlemmer har god datakunnskap var det essensielt å flette inn biologi og geologi i ideen. Med fokus rundt dette skapte vi vår første idé.
+flere spillere. Det stod også sentralt å bruke hele gruppens kompentanse. Ettersom tre av gruppens medlemmer har god datakunnskap var det essensielt å flette inn biologi og geologi i konseptet. Med fokus rundt dette skapte vi vår første idé.
 \begin{description}
 \item[Energispillet med flerspillermodus] \hfill\\
 Spillere skal organisere hver sin lille by, hvor fokuset er å forhandle
@@ -108,7 +108,7 @@ velger å gå for. En by som for eksempel fokuserer på kull kan raskt få
 mye resurser, men ville påvirke sitt eget miljø lokalt, og senere hele
 miljøet globalt.
 \end{description}
-Etter tilbakemeldinger fra landsbylederen viste deg seg derimot at idèen
+Etter tilbakemeldinger fra landsbylederen viste deg seg derimot at ideen
 ikke samsvarte godt nok med problemstillingen som var valgt. Dette førte
 til restrukturering av den opphavlige ideen, for å få mer fokus på
 gjenbruk og resirkulering. Følgende elementer fra ideen ble tatt med
