--- a/konseptdokument/report.tex
+++ b/konseptdokument/report.tex
@@ -77,6 +77,7 @@
 \include{tech}
 \include{genre}
 \include{artwork}
+\include{avsluttning}
 \include{conclusion}
 \thispagestyle{empty}
 \bibliographystyle{plain}
