--- a/konseptdokument/appendiks.tex
+++ b/konseptdokument/appendiks.tex
@@ -1,4 +1,4 @@
-\appendix
+\appendix \pagenumbering{roman} \pagestyle{plain}
 \addcontentsline{toc}{section}{Appendiks}
 \section{Prisliste} \label{A}
 
@@ -9,7 +9,7 @@
 				\end{center}
 			\end{figure}
 
-\section{Hitpoints og attack-verdier} \label{B}
+\section{Helsepoeng og angrepsverdier} \label{B}
 
 			\begin{figure} [H]
 				\begin{center}
