--- a/prosessrapport/hoveddel.tex
+++ b/prosessrapport/hoveddel.tex
@@ -15,7 +15,7 @@ betraktelig.
 
 \subsection{Demotivasjon til motivasjon}
 Da vi møtte opp onsdag 8. februar var den generelle stemningen på
-gruppen at medlemmene var demotiverte. Det at idéen vår fra den
+gruppen at medlemmene var demotiverte. Det at ideen vår fra den
 foregående onsdagen føltes som bortkastet lå fortsatt i tankene til alle
 på gruppen. Kjetil nevnte at han var lite klar for å gå tilbake til
 start og gjennom nye idémyldringer, ettersom vi forrige gang endelig
@@ -93,7 +93,7 @@ de forskjellige medlemmene trodde vi diskuterte. Her har Schwarz en
 teori om at man ved å dele all relevant informasjon, og alltid spille
 med åpne kort og konsekvent avdekke resonnementene bak de innspillene
 man kommer med, vil man bedre kunne hjelpe gruppen i å arbeide effektivt
-sammen. Ved å gå mer i dybden på det vi diskuterer, snakke om detaljer
+sammen. Det å gå mer i dybden på det vi diskuterer, snakke om detaljer
 og å være klar over at vi tenker forskjellig fører videre til at slike
 misforståelser blir unngått. Det å kartlegge slike ulikheter kan også
 brukes som en fordel i gruppen. I neste avsnitt reflekteres det over
@@ -106,11 +106,11 @@ denne situasjonen i forhold til gruppemedlemmenes ulike tankegang.
 	% Teori - erfaringer - forsettelse på den samme teorien blir litt rotete.
 	Dette fører til at når vi i situasjoner kommer frem til noe alle er enige i, betyr ikke dette at man alltid vet \emph{hva man er enige om}. Fordi gruppens medlemmer, på grunn av deres ulike erfaringer og (ubevisste) preferanser, har ulike bilder i tankene om hvordan de ser for seg denne ideen. Vi fant ut at dette var tilfelle. Så hvordan kan vi dra nytte av dette?
 
-	I utgangspunktet skulle man tro at en homogen gruppe som består av datastudenter er det optimale i gjennomførelsen av et slikt prosjekt. Johnson og Johnson nevner flere ulemper ved en lik gruppe. I denne situasjonen skal vi nevne en av disse ulempene. En slik gruppe kan mangle et bredt perspektiv. Kjetil, Trond og Christian ville mest sannsynlig klart å lage et godt produkt, men med en homogen tankegang er det antageligvis mange ting de ikke ville ha tenkt på. Ina og Andreas, som ikke har kunnskaper innen programmering, ser på oppgaven i et annet perspektiv enn resten av gruppen. Selv om de ikke har noe å bidra med rent teknisk til resultatet, ser de på ting annerledes og kaster lys over oppgaven på en måte datastudentene ikke gjør. Da vi prøvde å flette sammen hver persons synspunkt på hva vi trodde vi hadde kommet frem til, førte dette til at hele gruppen endret sin personlige idé over hva vi hadde diskutert og gjorde det om til gruppen sin idé. Dette resulterte i noe ingen på gruppen hadde sett for seg, men som alle var veldig fornøyde med.  Kjetil mente først at denne diskusjonen var sløsing med tid og så på dette som en unødvendig del av gruppearbeidet. Men den ideen gruppen satt igjen med på slutten av dagen fikk Kjetil til å tenke annerledes. Han ble overrasket over at hans eget syn på dataspillet vi utviklet ble såpass endret da de andre på gruppen fortalte hva de tenkte. 
+	I utgangspunktet skulle man tro at en homogen gruppe som består av datastudenter er det optimale i gjennomførelsen av et slikt prosjekt. Johnson og Johnson nevner flere ulemper ved en lik gruppe. I denne situasjonen skal vi nevne en av disse ulempene. En slik gruppe kan mangle et bredt perspektiv. Kjetil, Trond og Christian ville mest sannsynlig klart å lage et godt produkt, men med en homogen tankegang er det antageligvis mange ting de ikke ville ha tenkt på. Ina og Andreas, som ikke har kunnskaper innen programmering, ser på oppgaven fra et annet perspektiv enn resten av gruppen. Selv om de har lite å bidra med rent teknisk til resultatet, ser de på ting annerledes og kaster lys over oppgaven på en måte datastudentene ikke gjør. Da vi prøvde å flette sammen hver persons synspunkt på hva vi trodde vi hadde kommet frem til, førte dette til at hele gruppen endret sin personlige idé over hva vi hadde diskutert og gjorde det om til gruppen sin idé. Dette resulterte i noe ingen på gruppen hadde sett for seg, men som alle var veldig fornøyde med.  Kjetil mente først at denne diskusjonen var sløsing med tid og så på dette som en unødvendig del av gruppearbeidet. Men den ideen gruppen satt igjen med på slutten av dagen fikk Kjetil til å tenke annerledes. Han ble overrasket over at hans eget syn på dataspillet vi utviklet ble såpass endret da de andre på gruppen fortalte hva de tenkte. 
 
 
 	% Sette inn hvor det passer
-Som datastudenter med programmeringserfaring er det alltid en overhengende fare for at en begrenser ideer ved å tenke at "dette er ikke mulig å gjennomføre", hvor en heller burde tenke "dette er vanskelig å gjennomføre", eller "dette kan ikke  \emph{jeg} gjennomføre". Da er det svært lurt å ikke legge for stor vekt på hva som er mulig og umulig. Det å involvere mennesker uten programmeringserfaring kan derfor være en fordel i slike prosjekter, spesielt, da det er slik i Eksperter i Team at et godt konsept stiller like sterkt som en god gjennomføring. 
+Som datastudenter med programmeringserfaring er det alltid en overhengende fare for at en begrenser ideer ved å tenke at ''dette er ikke mulig å gjennomføre'', hvor en heller burde tenke ''dette er vanskelig å gjennomføre'', eller ''dette kan ikke  \emph{jeg} gjennomføre''. Da er det svært lurt å ikke legge for stor vekt på hva som er mulig og umulig. Det å involvere mennesker uten programmeringserfaring kan derfor være en fordel i slike prosjekter, spesielt da det er slik i Eksperter i Team at et godt konsept stiller like sterkt som et ferdig produkt. 
 
 
 Ulike synspunkt og meninger, i tillegg til ulik faglig kompetanse og tankegang, førte til et resultat ingen på gruppen så for seg i starten, men som alle var meget fornøyde med. Vi klarte med andre ord å dra nytte av synergieffektene som kommer av vår ulikheter.
@@ -123,7 +123,7 @@ prosjektet. Etter hver presentasjon skulle de andre gruppene ta på seg
 ulike roller ved bruk av metaforiske “hatter”, for så å evaluere
 presentasjonen og prosjektet til hver gruppe som fremførte. Denne
 tilbakemeldingsteknikken heter De Bonos hatter og er basert på Edward De
-Bonos' "Six Thinking Hats" \cite{bonos}
+Bonos' ''Six Thinking Hats'' \cite{bonos}
 
 Prinsippet går ut på at menneskehjernen tenker på ulike måter som kan
 bli delt inn i forskjellige kategorier. Under denne øvelsen blir hver
@@ -197,33 +197,35 @@ I den neste presentasjonsrunden ble vi tildelt den gule og hvite hatten. Disse v
 
 Andreas syntes det var både positive og negative sider med den svarte hatten (kritisk blikk). Det var enkelt å gi konkrete tilbakemeldinger på hva som kunne forbedres eller hva man ikke likte, men Andreas syntes at det var litt ubehagelig og krevende å si noe kritisk og samtidig passe på at man ikke sier noe som sårer dem man snakker til.
 
-Gruppen slet litt med å komme med innspill under den grønne hatten (kreativitet). Litt av grunnen til dette var at gruppen som presenterte allerede hadde en god idè, som var godt utviklet. Vi kom med noen innspill til dette, men Kjetil følte egentlig at vi var mer kritiske enn kreative, noe som gjorde rollen vanskelig.
+Gruppen slet litt med å komme med innspill under den grønne hatten (kreativitet). Litt av grunnen til dette var at gruppen som presenterte allerede hadde en god idé, som var godt utviklet. Vi kom med noen innspill til dette, men Kjetil følte egentlig at vi var mer kritiske enn kreative, noe som gjorde rollen vanskelig.
 
 
 \subsection{I sentrum av seks hatter}
-Det å få vårt eget prosjekt tatt i fra hverandre på denne måten var en lærerik affære. Det ble pekt på en del elementer som vi selv har diskutert mye tidligere, spesielt valget mellom det å implementere spillet som sanntid eller turbasert. Av de tilbakemeldinger vi fikk kunne det virke som om andre så for seg at spillet ville fungere bedre som et turbasert spill. Det var og spørsmål om spillets moral, og om spillet vårt egentlig ville være lærerikt. Det virket dog som vi hadde tenkt på det meste som ble kommentert, og vi føler vi har god kontroll. Alt i alt følte vi at tilbakemeldingene vi fikk var av en positiv art, noe vi følte oss svært fornøyde med. Vi var spesielt fornøyde med tilbakemeldinger fra den røde hatten. Det gikk igjen at intuisjonen til de andre i landsbyen var at vårt konsept virket spennende og at man ikke burde utvide det noe videre. Den grønne (kreativitet) og gule (muligheter) hatten kom med flere interessante innspill. Men ingen av tilbakemeldingene her var ting vi ikke hadde diskutert tidligere i prosessen. De kritiske tilbakemeldingene vi fikk fra den svarte hatten og spørsmål knyttet til prosessen fra den blå hatten handlet i større grad om hvordan vi skal klare å publisere ideen vår og konkurrere mot tilsvarende spill. Christian mente at dette egentlig var positive kommentarer, ettersom det viste at de andre i landsbyen hadde stor tro på idèen vår. 
+Det å få vårt eget prosjekt tatt i fra hverandre på denne måten var en lærerik affære. Det ble pekt på en del elementer som vi selv har diskutert mye tidligere, spesielt valget mellom det å implementere spillet som sanntid eller turbasert. Av de tilbakemeldinger vi fikk kunne det virke som om andre så for seg at spillet ville fungere bedre som et turbasert spill. Det var og spørsmål om spillets moral, og om spillet vårt egentlig ville være lærerikt. Det virket dog som vi hadde tenkt på det meste som ble kommentert, og vi følte vi hadde god kontroll. Alt i alt følte vi at tilbakemeldingene vi fikk var av en positiv art, noe vi var svært tilfreds med. 
+
+Vi var spesielt fornøyde med tilbakemeldinger fra den røde hatten. Det gikk igjen at intuisjonen til de andre i landsbyen var at vårt konsept virket spennende og at man ikke burde utvide det noe videre. Den grønne (kreativitet) og gule (muligheter) hatten kom med flere interessante innspill. Men ingen av tilbakemeldingene her var ting vi ikke hadde diskutert tidligere i prosessen. De kritiske tilbakemeldingene vi fikk fra den svarte hatten og spørsmål knyttet til prosessen fra den blå hatten handlet i større grad om hvordan vi skal klare å publisere ideen vår og konkurrere mot tilsvarende spill. Christian mente at dette egentlig var positive kommentarer, ettersom det viste at de andre i landsbyen hadde stor tro på ideen vår. 
 
 
 \subsection{Hvilke hatter har vi i gruppen?}
 Det å ha rollen som den kritiske svarte hatten synes Andreas passet bra til ham, ettersom han ofte leter etter ting å være kritiske til i slike situasjoner. Utfordringen ligger i å velge ord med omhu. Han følte seg mest komfortabel med den røde hatten; å si hva han føler og mener uten begrunnelse. Dette passer bra med gruppens beskrivelse av Andreas. Andreas oppdaget også at enkelte av landsbyens medlemmer passet godt til den grønne hatten, ettersom det stadig var de samme deltakerne som kom med kreative innslag.
 
-Christian syntes også at den svarte hatten passet bra til han. Han liker å være kritisk til nye idèer for å være en deltaker i forbedringer rundt dette. Dette passer bra til resultatet Christian fikk etter SPGR-øvelsen (se avsnitt 5: Person gruppe relasjon), der han i den situasjonen så seg selv som en analytisk og påståelig person. Christian likte ikke den blå hatten. Han synes det var kjedelig å sette seg inn i en saklig og prosessrelatert rolle som ikke kom med egne meninger og innspill.
+Christian syntes også at den svarte hatten passet bra til han. Han liker å være kritisk til nye ideer for å være en deltaker i forbedringer rundt dette. Dette passer bra til resultatet Christian fikk etter SPGR-øvelsen (se seksjon \ref{sec:SPGR}), der han i den situasjonen så seg selv som en analytisk og påståelig person. Christian likte ikke den blå hatten. Han synes det var kjedelig å sette seg inn i en saklig og prosessrelatert rolle som ikke kom med egne meninger og innspill.
 
 Trond syntes det var vanskelig å snevre inn sine tilbakemeldinger til en kategori. Han skulle ønske at man kunne være kritisk samtidig som man diskuterer muligheter og er kreativ. 
 
-Kjetil likte best den rød hatten; å fortelle magefølelsen sin uten begrunnelse. Kjetil likte derimot ikke å ta på seg den kritiske rollen som en svart hatt, blant annet fordi han selv måtte være observant på å identifisere negative sider ved presentasjonene. Han likte heller ikke at folk visste at "nå skal den svarte hatten snakke", ettersom tilskuerne da forventer at han skal si noe negativt. De Bono beskriver dette som et av poengene med å metaforisk ha på seg en hatt. De andre skal vite hvilken rolle du har slik at du får oppmerksomheten rundt hvilken hatt du har på deg. 
+Kjetil likte best den rød hatten; å fortelle magefølelsen sin uten begrunnelse. Kjetil likte derimot ikke å ta på seg den kritiske rollen som en svart hatt, blant annet fordi han selv måtte være observant på å identifisere negative sider ved presentasjonene. Han likte heller ikke at folk visste at ''nå skal den svarte hatten snakke'', ettersom tilskuerne da forventer at han skal si noe negativt. De Bono beskriver dette som et av poengene med å metaforisk ha på seg en hatt. De andre skal vite hvilken rolle du har slik at du får oppmerksomheten rundt hvilken hatt du har på deg. 
 
 Ina deltok ikke på denne øvelsen, men har likevel prøvd å idenfisere seg selv som en av hattene. Hun stod mellom den hvite hatten og den gule hatten. Hun liker å ha et nøytralt syn og å fokusere på fakta og informasjon, samt snakke om muligheter og gi positive tilbakemeldinger. Hun liker ikke å være kritisk eller snakke om negative følelser, ettersom hun er redd for hva folk tenker om henne i slike situasjoner. De Bono legger vekt på at hattene vi metaforisk tar på oss er et kostyme som sjuler våre personligheter og kler oss ut som en bestemt person. Dermed kan man oppføre seg som den personen man har "kledd seg ut" som. Med dette i tankene mener Ina at hun kunne tatt på seg rollen som hvilken som helst hatt, men hun foretrekker den hvite og gule, ettersom dette reflekterer henne bedre i en dagligdags situasjon.
 
-Selv om vi ikke bruker denne øvelsen i gruppen, kan man se ut i fra hva gruppemedlemmene likte og ikke likte, hvilke personligheter som framkommer under en tilbakemeldingssituasjon eller diskusjon i gruppen. Gruppen er godt representert med deltakere som liker å være kritiske og fortelle om sine intuisjoner og følelser. Christian, Andreas og Kjetil faller i disse to kategoriene, som røde og svarte hatter. Trond er et godt kreativt samt kritisk bidrag, mens Ina liker best å snakke om informasjon og muligheter. Med dette er alle hattene, unntagen den blå, representert i gruppen. Dette er med til å bidra til en effektiv gruppe som får belyst idèer, muligheter og meninger fra forskjellig vinkler. 
+Selv om vi ikke bruker denne øvelsen i gruppen, kan man se ut i fra hva gruppemedlemmene likte og ikke likte, hvilke personligheter som framkommer under en tilbakemeldingssituasjon eller diskusjon i gruppen. Gruppen er godt representert med deltakere som liker å være kritiske og fortelle om sine intuisjoner og følelser. Christian, Andreas og Kjetil faller i disse to kategoriene, som røde og svarte hatter. Trond er et godt kreativt samt kritisk bidrag, mens Ina liker best å snakke om informasjon og muligheter. Med dette er alle hattene, unntagen den blå, representert i gruppen. Dette er med til å bidra til en effektiv gruppe som får belyst ideer, muligheter og meninger fra forskjellig vinkler. 
 
-Den blå hatten (prosessblikk) var det ingen på gruppen som kjente seg igjen i. Vi tenker at en slik person er en slags gruppeleder som har kontroll på hvordan gruppen ligger an, hva som må gjøres og hvordan man skal planlegge fremover. Kjetil mener at flere på gruppen egentlig har et prosessblikk på gruppearbeider, og at dette kanskje er noe man ikke tenker over. I tillegg har vi landsbylederen og fascilitatorene som følger oss opp. Dermed er alle hattene representert i gruppen vår.
-
-
-Alle gruppemedlemmene syntes at De Bonos hatter var et nyttig verktøy. Det kan være en fin øvelse å bruke i utviklingsfasen av konseptet vårt. Vi bestemte oss for å ta en gjennomgang av hele prosjektet vårt en måned frem i tid ved bruk av De Bonos hatter. Dermed sikrer vi oss at alle aspekter blir tatt opp, og om det er noe vi kan endre/forbedre før vi sier oss fornøyde. Det er også viktig at alle på gruppen får være de forskjellige hattene, til og med de rollene man ikke liker. Det er for eksempel viktig at Ina og Kjetil tar på seg rollen som den kritiske. De andre på gruppen er ofte kritiske, men Ina og Kjetil sitter kanskje inne med kritikk de ikke vil ta opp som kan være avgjørende for prosjektets ferdigstilling. 
+Den blå hatten (prosessblikk) var det ingen på gruppen som kjente seg igjen i. Vi tenker at en slik person er en slags gruppeleder som har kontroll på hvordan gruppen ligger an, hva som må gjøres og hvordan man skal planlegge fremover. Kjetil mener at flere på gruppen egentlig har et prosessblikk på gruppearbeid, og at dette kanskje er noe man ikke tenker over. I tillegg har vi landsbylederen og fasilitatorene som følger oss opp. Dermed er alle hattene representert i gruppen vår.
+Alle gruppemedlemmene syntes at De Bonos hatter var et nyttig verktøy. Det kan være en fin øvelse å bruke i utviklingsfasen av konseptet vårt. 
+%Vi bestemte oss for å ta en gjennomgang av hele prosjektet vårt en måned frem i tid ved bruk av De Bonos hatter. %Dermed sikrer vi oss at alle aspekter blir tatt opp, og om det er noe vi kan endre/forbedre før vi sier oss fornøyde. Det er %også viktig at alle på gruppen får være de forskjellige hattene, til og med de rollene man ikke liker. Det er for eksempel %viktig at Ina og Kjetil tar på seg rollen som den kritiske. De andre på gruppen er ofte kritiske, men Ina og Kjetil sitter %kanskje inne med kritikk de ikke vil ta opp som kan være avgjørende for prosjektets ferdigstilling. 
 
 
 \section{Person-Gruppe Relasjon} %SPGR-øvelsen 21.03
+\label{sec:SPGR}
 Den 21. mars bestemte gruppen seg for å gjennomføre en SPGR- test (Systematisere Person-Gruppe Relasjonen). Det var tidlig på morgenen, og gruppemedlemmene hadde nettopp fått en kopp kaffe. Produktiviteten var lav, og muligheten til å kvikne til med en gruppeøvelse var forlokkende. Hensikten med denne øvelsen var å se på hvilke typer adferd som fant sted i gruppen, gitt en bestemt situasjon. 
 
 Gruppen ble gitt 3 minutter til å bestemme seg for en situasjon de ville analysere. Generelt har det ikke vært noen store konflikter innad i gruppen, men det var to situasjoner som pekte seg ut som mer konfliktfulle enn andre. Den første situasjonen var valg av konsept, mens den andre situasjonen var en beslutning på om det endelige konseptet skulle spilles i sanntid eller om det skulle være turbasert. Den sistnevnte situasjonen ble valgt, da det var enighet om at det var gruppens mest konfliktfylte situasjon. Trond ønsket at spillet skulle være turbasert, mens de andre gruppemedlemmene så for seg at spillet skulle spilles i sanntid. Andreas var redd for at dette var et dårlig valg av situasjon, ettersom Trond stod alene mot resten av gruppen. Men Trond syntes det var ok. Resultatet kunne bli interessant.
@@ -251,7 +253,7 @@ Nedenfor er en oversikt over resultatene fra øvelsen.
 Andreas følte selv at han var autoritær, påståelig og utadvent. Han var redd for at han kanskje ble oppfattet som for kontrollerende, men ble overrasket da det viste seg at gruppen så på ham som samarbeidsvillig, oppmuntrende og demokratisk. 
 
 \item[Kjetil] \hfill \\
-Kjetil så på seg selv som kritisk, åpen og sammarbeidsvillig. Han følte også at han ble litt likegyldig etter hvert som diskusjonen utartet seg, og at det viktigste var å komme videre med prosjektet. Gruppen så på Kjetil som medfølende, utadvent og ser alle som likeverdige. Andreas følte det var Kjetil som dro i gang diskusjonen, og han så på Kjetil som kritisk og autoritær.
+Kjetil så på seg selv som kritisk, åpen og samarbeidsvillig. Han følte også at han ble litt likegyldig etter hvert som diskusjonen utartet seg, og at det viktigste var å komme videre med prosjektet. Gruppen så på Kjetil som medfølende, utadvent og ser alle som likeverdige. Andreas følte det var Kjetil som dro i gang diskusjonen, og han så på Kjetil som kritisk og autoritær.
 
 \item[Trond] \hfill \\	
 Trond hadde identifisert seg selv som åpen, demokratisk og rasjonell. Han følte også at han kunne være tilbakeholden og betvile sine egne evner. Resten av gruppen så på Trond som støttende, effektiv og vennlig. Da Trond var den eneste som argumenterte for at spillet skulle være turbasert, ble han også sett på som tøff og påståelig i denne situasjonen. 
@@ -265,11 +267,11 @@ Ina synes selv hun var samarbeidsvillig, påståelig og medfølende. Men følte 
 \end{description}
 Fra denne øvelsen kan man se at samtlige gruppemedlemmer føler seg mer
 ekstreme i væremåten sin enn hva som oppfattes av resten av gruppen. Et
-eksempel på dette var at de fleste hadde markert seg seg selv som
+eksempel på dette var at de fleste hadde markert seg selv som
 påståelige, men av andre hadde blitt markert som mer forståelsesfulle,
-åpne og samarbeidsvillig. Andreas lurte litt på om det kunne ha noe med
-at man på grunn av at man var enige med hverandre ikke oppfattet andre
-som påståelige da det de sier reflekterer det en selv mener. 
+åpne og samarbeidsvillig. Andreas lurte litt på om dette kunne ha noe med
+at man var enige med hverandre og dermed ikke oppfattet andre
+som påståelige da det de sa reflekterte det en selv mente. 
 
 Fremover er det derfor viktig å ha fokus på at man ikke blir for passiv.
 Fordi selv om man føler seg veldig dominerende, er det ikke sikkert at
