sidetall roman p appndix

--- a/prosessrapport/appendiks.tex
+++ b/prosessrapport/appendiks.tex
@@ -1,4 +1,4 @@
-\appendix
+\appendix \pagenumbering{roman}
 \addcontentsline{toc}{section}{Appendiks}
 \addtocontents{toc}{\protect\setcounter{tocdepth}{-1}}
 \section{Samarbeidsavtale} \label{A} 
