Some more meat to definitions.

--- a/konseptdokument/definisjoner.tex
+++ b/konseptdokument/definisjoner.tex
@@ -4,15 +4,24 @@
 \subsection{Definisjoner}
 Dette avsnittet forklare de grunnleggende definisjonene rundt Garbage
 Alert. Definisjonene er i hovedsak sentrert rundt hvordan spilleren
-oppfatter spillet~\cite{gameplay}.
-\subsubsection{Oppstart} Alle spillere starter med like forutsetninger.
-Hvordan spillet utvikler seg kommer an på hvordan spillerene bruker
-ressursene han har opparbeider seg. Hvordan ressursene blir brukt kommer
-an på hvilken strategi spilleren går for.
+oppfatter spillet, og på hvilke måter spilleren kan påvirke dynamikken.
+\subsubsection{Oppstart}
+Alle deltagende spillere starter med like forutsetninger. Dette er en øy
+fylt til randen av søppel og en miljøstasjon. For å få fatt i ressurser
+(som igjen kan føre til utvikling), må spilleren resirkulere søppelet.
+Hvordan spilleren velger å bruke de nyervervede ressursene ligger til
+grunn for hvilken strategi spilleren velger å gå for.
 \subsubsection{Hvordan vinne}
-En spiller har vunnet dersom alle de andre spillerene har mistet
-gjenvinningsstasjonene sine, eller spilleren klarer å blit kvitt alt
-søppelet på sin øy.
+I Garbarge Alert er det to måter å vinne på. En spiller har vunnet
+dersom alle motspillerene har blitt nøytralisert. I tillegg kan en
+spiller vinne dersom han er først ute med å renske sin øy for søppel.
+Ved å innføre to ulike måter belønner vi ulike taktikker, nemlig en
+offensiv taktikk (gå for angrep), og en defensiv (gå for forsvar).
+Spillets mangfold blir først demonstrert om den spiller velger å
+kombinere taktikkene.
 \subsubsection{Hvordan tape}
-En spiller taper dersom gjenvinningsstajonen hans blir ødelagt. Spilleren
-vil også tape dersom en annen spiller klarer å renske sin øy for søppel.
+En spiller taper dersom miljøstasjonen hans blir ødelagt. Stasjonen
+tåler en gitt mengde skade (i forhold til våpentype), før den kollapser.
+Stasjonen kan repareres, for en viss mengde ressurser.
+Spilleren vil også tape dersom en annen spiller klarer å renske sin øy
+for søppel.
