--- a/konseptdokument/conclusion.tex
+++ b/konseptdokument/conclusion.tex
@@ -10,3 +10,4 @@ Krig, som står sentralt i Garbage Alert, er ikke direkte en samfunnsnyttig del 
 Katastrofene i spillet er i større grad en eksplisitt informativ konsekvens som belyser negative følger av dårlig håndtering av søppel. De fleste informative delene av spillet er derimot implisitte, og vil forhåpentligvis øke spillerens bevisshet rundt økt gjenbruk og nytten av dette. 
 
 \subsection{Videre arbeid}
+Et naturlig videre arbeid med Garbage Alert vil være å fullføre prototypen med implementasjon av flerspillerfunksjonalitet og ferdigstilt grafikk på mobile enheter. For å kunne fullføre prototypen burde minimum en designer og en programmerer ta del i prosjektet for å oppnå den samlede kompetansen som kreves. Ved ferdigstillelse av prototypen vil det være aktuelt å finne samarbeidspartnere som kan bidra med finansiering og markedsføring.
