--- a/konseptdokument/appendiks.tex
+++ b/konseptdokument/appendiks.tex
@@ -15,5 +15,5 @@
 				\begin{center}
 					\includegraphics[width=77mm]{images/hitpoints_attack_stor}
 				\end{center}
-				\caption{Utkast over hitpoints og attackverdier}
+				\caption{Utkast over helsepoeng (hitpoints) og angrepsverdier (attack)}
 			\end{figure}
