Om meg i avsluttning prosess

--- a/prosessrapport/avslutning.tex
+++ b/prosessrapport/avslutning.tex
@@ -28,6 +28,7 @@ Hvert enkelt av gruppemedlemmene har gjort følgende tanker om hva nettopp de vi
 \item[Andreas] \hfill \\
 
 \item[Christian] \hfill \\
+Christian føler han har fått god innsikt i gruppedynamikk og øvelser for å forbedre kommunikasjonen inad i en gruppe. Han synes det var interessant å få tilbakemelding på hvordan de andre i gruppen oppfattet ham som person. Dette vil han definitivt ta med seg videre ut i arbeidslivet.  
 
 \item[Ina] \hfill \\
 Ina tar med seg en bedre innstilling til framtidig gruppearbeid og troen på at hvis man jobber for 
