--- a/konseptdokument/artwork.tex
+++ b/konseptdokument/artwork.tex
@@ -7,61 +7,54 @@ Den grafiske fremstillingen i spillet er ment å være leken og rettet mot barn 
 Videre har det å holde ting oversiktlig og stort nok til å trykkes på en berøringsskjerm vært en begrensning vi har forsøkt å overholde.
 
 
-\begin{center}
-	\begin{figure}
-		\includegraphics[width=\textwidth]{images/splashscreen.png}
-		\caption{Spillets introskjerm}
-		\label{fig:splashscreen}
-	\end{figure}
-\end{center}
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{images/splashscreen.png}
+\caption{Spillets introskjerm}
+\label{fig:splashscreen}
+\end{figure}
 
-\begin{center}
-	\begin{figure}
-		\includegraphics[width=\textwidth]{images/Oppgradering.png}
-		\caption{Miljøstasjonen kan oppgraderes til å håndtere ulike typer avfallsgjenvinning.}
-		\label{fig:Oppgradering}
-	\end{figure}
-\end{center}
+\begin{figure}
+\centering
+\includegraphics[width=\textwidth]{images/Oppgradering.png}
+\caption{Miljøstasjonen kan oppgraderes til å håndtere ulike typer avfallsgjenvinning.}
+\label{fig:Oppgradering}
+\end{figure}
 
-\begin{center}
-	\begin{figure}
-		\includegraphics{images/Eksplosjon.png}
-		\caption{Ved et angrep på en annen spiller vil et projektil avfyres og eksplodere på motspillerens eventuelle forsvarsstruktur.}
-		\label{fig:Eksplosjon}
-	\end{figure}
-\end{center}
+\begin{figure}
+\centering
+\includegraphics[scale=0.5]{images/Eksplosjon.png}
+\caption{Ved et angrep på en annen spiller vil et projektil avfyres og eksplodere på motspillerens eventuelle forsvarsstruktur.}
+\label{fig:Eksplosjon}
+\end{figure}
 
-\begin{center}
-	\begin{figure}
-		\includegraphics[width=\textwidth]{images/OppgradereMur.png}
-		\caption{Spillerens forsvarsstruktur kan oppgraderes til å håndtere sterkere skyts fra motspilleren, avhengig av tilgjengelige ressurser.}
-		\label{fig:OppgradereMur}
-	\end{figure}
-\end{center}
+\begin{figure}
+\centering
+\includegraphics[scale=0.5]{images/OppgradereMur.png}
+\caption{Spillerens forsvarsstruktur kan oppgraderes til å håndtere sterkere skyts fra motspilleren, avhengig av tilgjengelige ressurser.}
+\label{fig:OppgradereMur}
+\end{figure}
 
-\begin{center}
-	\begin{figure}
-		\includegraphics[width=\textwidth]{images/Tsunami.png}
-		\caption{Globale geohasarder kan oppstå som følge av mye global forsøpling, som for eksempel en tsunami.}
-		\label{fig:Tsunami}
-	\end{figure}
-\end{center}
+\begin{figure}
+\centering
+\includegraphics[scale=0.5]{images/Tsunami.png}
+\caption{Globale geohasarder kan oppstå som følge av mye global forsøpling, som for eksempel en tsunami.}
+\label{fig:Tsunami}
+\end{figure}
 
-\begin{center}
-	\begin{figure}
-		\includegraphics[width=\textwidth]{images/Kolera.png}
-		\caption{Lokale biohasarder kan oppstå som følge av mye lokal forurensning. Her er et sykdomsutbrudd.}
-		\label{fig:Kolera}
-	\end{figure}
-\end{center}
+\begin{figure}
+\centering
+\includegraphics[scale=0.7]{images/Kolera.png}
+\caption{Lokale biohasarder kan oppstå som følge av mye lokal forurensning. Her er et sykdomsutbrudd.}
+\label{fig:Kolera}
+\end{figure}
 
-\begin{center}
-	\begin{figure}
-		\includegraphics{images/OppgradereEnv.png}
-		\caption{Miljøstasjonens effektivitet kan oppgraderes slik at den gjenvinner mer materialer fra hver avfallsenhet.}
-		\label{fig:OppgradereEnv}
-	\end{figure}
-\end{center}
+\begin{figure}
+\centering
+\includegraphics[scale=0.7]{images/OppgradereEnv.png}
+\caption{Miljøstasjonens effektivitet kan oppgraderes slik at den gjenvinner mer materialer fra hver avfallsenhet.}
+\label{fig:OppgradereEnv}
+\end{figure}
 
 
 
