--- a/prosessrapport/abstract.tex
+++ b/prosessrapport/abstract.tex
@@ -1,7 +1,7 @@
 \begin{abstract}
-\emph{Garbage Alert} er et spill som skal redde verden gjennom å opplyse
-menneskeheten om viktigheten av resirkulering og gjenbruk. Dette gjøres
+\emph{Garbage Alert} er et spill som har som mål å redde verden gjennom å opplyse
+mennesker om viktigheten av resirkulering og gjenbruk. Dette gjøres
 ved å abstrahere konseptet. En stor del av faget går ut på hvordan beslutninger
-og samarbeid har foregått innad i gruppen. Denne rapporten vil derfor beskrive disse
+og samarbeid har foregått innad i gruppen. Denne rapporten vil beskrive disse
 prosessene.
 \end{abstract}
