andreas har skrevet om seg selv

--- a/prosessrapport/avslutning.tex
+++ b/prosessrapport/avslutning.tex
@@ -26,6 +26,7 @@ områder kan ufarliggjøres ved å ta på seg forskjellige roller.
 Hvert enkelt av gruppemedlemmene har gjort følgende tanker om hva nettopp de vil ta med seg videre fra semesteret:
 \begin{description}
 \item[Andreas] \hfill \\
+Andreas har fått flere positive erfaringer fra gruppeprosessen. Han har endret sin innstilling mot å jobbe i grupper, ettersom han mener at det har vært en fornøyelse å jobbe sammen med resten av gruppen. Å bli bevisst på hvordan man framstår i en gruppe og å bruke tid på å snakke om hvordan man vil at samarbeidet skal være, er faktorer han mener står til grunn for den positive opplevelsen han har hatt. Andreas syntes også det var interessant å bli observant på hvordan gruppen ser på han, i motsetning til hvordan han selv tror han framstår. Dette understreker han som en viktig erfaring han vil ta med seg i fremtidige samarbeid.
 
 \item[Christian] \hfill \\
 Christian føler han har fått god innsikt i gruppedynamikk og øvelser for å forbedre kommunikasjonen inad i en gruppe. Han synes det var interessant å få tilbakemelding på hvordan de andre i gruppen oppfattet ham som person. Dette vil han definitivt ta med seg videre ut i arbeidslivet.  
@@ -47,6 +48,7 @@ klart noe han vil ta med seg videre, og forhåpentligvis få brukt i en
 livs- og arbeidssituasjon.
 
 \item[Trond] \hfill \\
+TROND HAR DU NOEN ERFARINGER DU VIL DELE MED RESTEN AV KLASSEN!?
 
 \end{description}
 Alle i gruppen føler at de gjennom prosessen har blitt hørt slik at hvert medlem føler eierskap og er stolt av det ferdige produktet. 
