la til siste debono hatt i tabell

--- a/prosessrapport/hoveddel.tex
+++ b/prosessrapport/hoveddel.tex
@@ -149,6 +149,7 @@ Rød hatt & Følelse og intuisjon \\
 Gul hatt & Muligheter \\
 Svart hatt & Kritisk blikk \\
 Blå hatt & Prosessblikk \\
+Grønn hatt & Kreativitet \\
 \hline
 \end{tabular}
 \caption{De ulike hattene knyttet opp mot tilstand}
