Added some more to conclusion.

--- a/konseptdokument/conclusion.tex
+++ b/konseptdokument/conclusion.tex
@@ -1,4 +1,6 @@
 \section{Resultat}
+Denne seksjonen belyser samfunnsnytten av spillet, og vil forklare hva
+som er tenkt rundt viderer arbeid.
 \subsection{Samfunnsnytten av spillet}
 Garbage Alert har som mål å belyse nytten av gjenbruk og resirkulering, lokalt og globalt, gjennom et flerspiller dataspill (se seksjon \ref{sec:problemstilling}, Problemstilling).
 Gjenvinning av søppel står sentralt i Garbage Alert. Når spilleren gjenvinner ulike ressurser fra søppelet vil han/hun se at man ikke nødvendigvis er avhengig av å utvinne nye ressurser, men at man kan bruke ressursene man har på ny. Dette vil forhåpentligvis gi økt bevissthet rundt gjenbruk. \\
