--- a/konseptdokument/artwork.tex
+++ b/konseptdokument/artwork.tex
@@ -1,5 +1,5 @@
 %!TEX root = report.tex
-\section{Grafisk fremstilling}
+\section{Grafisk fremstilling}\label{sec:artwork}
 Under vil vi beskrive den grafiske fremstillingen av Garbage Alert, beskrive valgene vi har gjort og illustrere dette med skjermskudd.
 
 Den grafiske fremstillingen i spillet er ment å være leken og rettet mot barn i alle aldre, og er sterkt inspirert av den klassiske spillserien Advance Wars\cite{advancewars}.
