--- a/konseptdokument/conclusion.tex
+++ b/konseptdokument/conclusion.tex
@@ -1,4 +1,4 @@
-\section{Resultat}
+\section{Resultat}\label{sec:conclusion}
 Denne seksjonen belyser samfunnsnytten av spillet, og vil forklare hva
 som er tenkt rundt viderer arbeid.
 \subsection{Samfunnsnytten av spillet}
