--- a/konseptdokument/intro.tex
+++ b/konseptdokument/intro.tex
@@ -10,9 +10,8 @@ Dokumentet er i hovedsak strukturert i 4 hoveddeler:
 	\item Introduksjon (Avsnitt~\ref{sec:intro})
 	\item Konsept og spillutforming (Avsnitt~\ref{sec:konsept})
 	\item Teknisk (Avsnitt~\ref{sec:teknisk})
-	\item Sjanger (Avsnitt~\ref{sec:genre})
 	\item Grafisk fremstilling (Avsnitt~\ref{sec:artwork})
-	\item Konklusjon (Avsnitt~\ref{sec:conclusion})
+	\item Resultat (Avsnitt~\ref{sec:conclusion})
 \end{enumerate}
 Konseptdelen gir et innblikk i hvordan konseptet ble unnfanget og hvilke
 valg som lå til grunn for dette. I tillegg gir denne delen en overordnet
