Updated some text.

--- a/konseptdokument/definisjoner.tex
+++ b/konseptdokument/definisjoner.tex
@@ -8,20 +8,20 @@ oppfatter spillet, og på hvilke måter spilleren kan påvirke dynamikken.
 \subsubsection{Oppstart}
 Alle deltagende spillere starter med like forutsetninger. Dette er en øy
 fylt til randen av søppel og en miljøstasjon. For å få fatt i ressurser
-(som igjen kan føre til utvikling), må spilleren resirkulere søppelet.
-Hvordan spilleren velger å bruke de nyervervede ressursene ligger til
-grunn for hvilken strategi spilleren velger å gå for.
+(som muliggjør utvikling), må spilleren resirkulere søppelet.  Hvordan
+spilleren velger å bruke de nyervervede ressursene ligger til grunn for
+hvilken strategi spilleren velger å gå for.
 \subsubsection{Hvordan vinne}
 I Garbarge Alert er det to måter å vinne på. En spiller har vunnet
-dersom alle motspillerene har blitt nøytralisert. I tillegg kan en
-spiller vinne dersom han er først ute med å renske sin øy for søppel.
-Ved å innføre to ulike måter belønner vi ulike taktikker, nemlig en
-offensiv taktikk (gå for angrep), og en defensiv (gå for forsvar).
-Spillets mangfold blir først demonstrert om den spiller velger å
-kombinere taktikkene.
+dersom alle motstandere har blitt nøytralisert. I tillegg kan en spiller
+vinne dersom han er først ute med å rydde sin øy for søppel.  Ved å
+innføre to ulike måter belønner vi ulike taktikker, nemlig en offensiv
+taktikk (gå for angrep), og en defensiv (gå for forsvar).  Spillets
+mangfold blir først demonstrert om den spiller velger å kombinere
+taktikkene.
 \subsubsection{Hvordan tape}
 En spiller taper dersom miljøstasjonen hans blir ødelagt. Stasjonen
 tåler en gitt mengde skade (i forhold til våpentype), før den kollapser.
 Stasjonen kan repareres, for en viss mengde ressurser.
-Spilleren vil også tape dersom en annen spiller klarer å renske sin øy
+Spilleren vil også tape dersom en annen spiller klarer å rydde sin øy
 for søppel.
