Fixed some references and removed footnote

--- a/konseptdokument/concept.tex
+++ b/konseptdokument/concept.tex
@@ -30,14 +30,19 @@ spillkonseptet, hvilke spillaspekter som er tatt med og spillets
 dynamikk.
 
 
-\subsection{Sjanger}
+\subsection{Sjanger}\label{sec:genre}
 
 %Før vi endte opp med sanntidsstrategisjangeren vurderte vi imidlertid en rekke andre mulige sjangre for realiseringen av konseptet. Spesielt eventyr- og rollespillsjangeren ble sterkt vurdert.
 
 Under vil vi beskrive en rekke sjangre som ble vurdert for realiseringen av \emph{Garbage Alert}. Legg dog merke til at navnet ble til en tid etter at sjangeren var valgt.
 
-\subsubsection{Eventyr}\label{sec:eventyr}
-Den første sjangeren som ble vurdert som utgangspunkt for realisering av spillet var eventyrsjangeren. Denne sjangeren er definert ved at en direkte kontrollerer en protagonist i en interaktiv historie. Spilldynamikken består gjerne av det å overvinne ens omgivelser ved utforskning og oppgaveløsning\footnote{Rollings, Andrew; Ernest Adams (2006), Fundamentals of Game Design, Prentice Hall}.
+\subsubsection{Eventyr}
+Den første sjangeren som ble vurdert som utgangspunkt for realisering av
+spillet var eventyrsjangeren. Denne sjangeren er definert ved at en
+direkte kontrollerer en protagonist i en interaktiv historie.
+Spilldynamikken består gjerne av det å overvinne ens omgivelser ved
+utforskning og oppgaveløsning. Dette er videre forklart i ``Fundamentals
+of Game Design''~\cite{game_design}.
 
 Der finnes en hel rekke undersjangre under eventyrsjangeren. Av spesiell interesse har pek-og-klikk- og action-eventyrsjangrene vært.
 
@@ -63,7 +68,7 @@ Der finnes en hel rekke undersjangre under eventyrsjangeren. Av spesiell interes
 
 
 
-\subsubsection{Strategi}\label{sec:strategispill}
+\subsubsection{Strategi}
 Den andre sjangeren som ble vurdert for å realisere ideen om et resirkulering- og gjenbruksspill var strategisjangeren. Sentralt i denne sjangeren er ressursforvaltning, noe vi og følte kunne brukes for å realisere et godt konsept.
 
 \begin{description}
