--- a/konseptdokument/referanser.bib
+++ b/konseptdokument/referanser.bib
@@ -27,4 +27,9 @@ Management},
 	Howpublished={Vett og Viten},
 	Year=2005
 }
-	
+
+@misc{game_design,
+	Author={Rollings, Andrew and Adams, Ernest},
+	Title={Fundamentals of Game Design, Prentice Hall},
+	Year=2006
+}
